NSSA244-LAB1-ARM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_WEB1_name": { "defaultValue": "WEB1", "type": "String" },
        "virtualMachines_WEB2_name": { "defaultValue": "WEB2", "type": "String" },
        "sshPublicKeys_WEB_key_name": { "defaultValue": "WEB_key", "type": "String" },
        "publicIPAddresses_WEB1_ip_name": { "defaultValue": "WEB1-ip", "type": "String" },
        "publicIPAddresses_WEB2_ip_name": { "defaultValue": "WEB2-ip", "type": "String" },
        "virtualNetworks_VNET_LAB1_name": { "defaultValue": "VNET-LAB1", "type": "String" },
        "networkInterfaces_web1_nic_name": { "defaultValue": "web1-nic", "type": "String" },
        "networkInterfaces_web2_nic_name": { "defaultValue": "web2-nic", "type": "String" },
        "networkSecurityGroups_NSG_LAB1_name": { "defaultValue": "NSG-LAB1", "type": "String" }
    },
    "resources": [
        {
            "type": "Microsoft.Compute/disks",
            "apiVersion": "2021-12-01",
            "name": "WEB1-DATA1",
            "location": "eastus2",
            "zones": [ "1" ],
            "sku": { "name": "Standard_LRS" },
            "properties": { "creationData": { "createOption": "Empty" }, "diskSizeGB": 16 }
        },
        {
            "type": "Microsoft.Compute/disks",
            "apiVersion": "2021-12-01",
            "name": "WEB2-DATA1",
            "location": "eastus2",
            "zones": [ "1" ],
            "sku": { "name": "Standard_LRS" },
            "properties": { "creationData": { "createOption": "Empty" }, "diskSizeGB": 16 }
        },
        {
            "type": "Microsoft.Compute/sshPublicKeys",
            "apiVersion": "2022-03-01",
            "name": "[parameters('sshPublicKeys_WEB_key_name')]",
            "location": "eastus2",
            "properties": { "publicKey": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDKT67quSPxlSXgVuTmEaakzqM4XmJlMHDO5dE1buDgVh01rrAl8YEiNPT9JjWtURitdUMYmUUouaTGhLtUFr+7zxv2Wz5+lXD4hZryn9rvAQU/AlFTo9+MfWNwmuoqJ1P0zLT9+symRdg+j4xhyhmq7QitCZ3Cn+gY7RUdNW18WLprn6xfRb3YNvtWPDXdQJBv5dOldSVG9dJtTMd/wQpfrBkleoURH3LMJcuBd84sTmy0t+MMm7Zv1VaEs3Ny75u2yHpDdQa8pfCnf8nbh9GsuG552pdVUt0g3I+fI1WlhYIYDgNEup+O4bWSR3HgoamME5ZYq6Cwmu6hod4aBF67Ozhb+gz6gNYP5BF5LKMrbvlxCd4aWdT8mWdcxumo9/LkHa2oMvQkoK53XjCiBaSlxR/F2j9IuU83Fw [...]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2021-05-01",
            "name": "[parameters('networkSecurityGroups_NSG_LAB1_name')]",
            "location": "eastus2",
            "properties": {
                "securityRules": [
                    { "name": "ALLOW-SSH", "properties": { "protocol": "TCP", "sourcePortRange": "*", "destinationPortRange": "22", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*", "access": "Allow", "priority": 100, "direction": "Inbound" } },
                    { "name": "ALLOW-HTTP", "properties": { "protocol": "TCP", "sourcePortRange": "*", "destinationPortRange": "80", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*", "access": "Allow", "priority": 101, "direction": "Inbound" } }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2021-05-01",
            "name": "[parameters('virtualNetworks_VNET_LAB1_name')]",
            "location": "eastus2",
            "properties": {
                "addressSpace": { "addressPrefixes": [ "10.0.0.0/16" ] },
                "subnets": [ { "name": "SUBNET-WEB", "properties": { "addressPrefix": "10.0.1.0/24" } } ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-05-01",
            "name": "[parameters('publicIPAddresses_WEB1_ip_name')]",
            "location": "eastus2",
            "sku": { "name": "Standard" },
            "zones": [ "1" ],
            "properties": { "publicIPAllocationMethod": "Static" }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2021-05-01",
            "name": "[parameters('publicIPAddresses_WEB2_ip_name')]",
            "location": "eastus2",
            "sku": { "name": "Standard" },
            "zones": [ "1" ],
            "properties": { "publicIPAllocationMethod": "Static" }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2021-05-01",
            "name": "[parameters('networkInterfaces_web1_nic_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNET_LAB1_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_LAB1_name'))]"
            ],
            "properties": {
                "ipConfigurations": [ {
                    "name": "ipconfig1",
                    "properties": {
                        "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB1_ip_name'))]" },
                        "subnet": { "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'SUBNET-WEB')]" },
                        "privateIPAllocationMethod": "Dynamic"
                    }
                } ],
                "networkSecurityGroup": { "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_LAB1_name'))]" }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2021-05-01",
            "name": "[parameters('networkInterfaces_web2_nic_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB2_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNET_LAB1_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_LAB1_name'))]"
            ],
            "properties": {
                "ipConfigurations": [ {
                    "name": "ipconfig1",
                    "properties": {
                        "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_WEB2_ip_name'))]" },
                        "subnet": { "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET_LAB1_name'), 'SUBNET-WEB')]" },
                        "privateIPAllocationMethod": "Dynamic"
                    }
                } ],
                "networkSecurityGroup": { "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_LAB1_name'))]" }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2022-03-01",
            "name": "[parameters('virtualMachines_WEB1_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', 'WEB1-DATA1')]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web1_nic_name'))]"
            ],
            "zones": [ "1" ],
            "properties": {
                "hardwareProfile": { "vmSize": "Standard_B2s" },
                "storageProfile": {
                    "imageReference": { "publisher": "Canonical", "offer": "ubuntu-24_04-lts", "sku": "server", "version": "latest" },
                    "osDisk": { "createOption": "FromImage", "managedDisk": { "storageAccountType": "Standard_LRS" } },
                    "dataDisks": [ { "lun": 0, "name": "WEB1-DATA1", "createOption": "Attach", "managedDisk": { "id": "[resourceId('Microsoft.Compute/disks', 'WEB1-DATA1')]" } } ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_WEB1_name')]",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": { "disablePasswordAuthentication": true, "ssh": { "publicKeys": [ { "path": "/home/azureuser/.ssh/authorized_keys", "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDKT67quSPxlSXgVuTmEaakzqM4XmJlMHDO5dE1buDgVh01rrAl8YEiNPT9JjWtURitdUMYmUUouaTGhLtUFr+7zxv2Wz5+lXD4hZryn9rvAQU/AlFTo9+MfWNwmuoqJ1P0zLT9+symRdg+j4xhyhmq7QitCZ3Cn+gY7RUdNW18WLprn6xfRb3YNvtWPDXdQJBv5dOldSVG9dJtTMd/wQpfrBkleoURH3LMJcuBd84sTmy0t+MMm7Zv1VaEs3Ny75u2yHpDdQa8pfCnf8nbh9GsuG552pdVUt0g3I [...]
                },
                "networkProfile": { "networkInterfaces": [ { "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web1_nic_name'))]" } ] }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2022-03-01",
            "name": "[parameters('virtualMachines_WEB2_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', 'WEB2-DATA1')]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web2_nic_name'))]"
            ],
            "zones": [ "1" ],
            "properties": {
                "hardwareProfile": { "vmSize": "Standard_B2s" },
                "storageProfile": {
                    "imageReference": { "publisher": "Canonical", "offer": "ubuntu-24_04-lts", "sku": "server", "version": "latest" },
                    "osDisk": { "createOption": "FromImage", "managedDisk": { "storageAccountType": "Standard_LRS" } },
                    "dataDisks": [ { "lun": 0, "name": "WEB2-DATA1", "createOption": "Attach", "managedDisk": { "id": "[resourceId('Microsoft.Compute/disks', 'WEB2-DATA1')]" } } ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_WEB2_name')]",
                    "adminUsername": "azureuser",
                    "linuxConfiguration": { "disablePasswordAuthentication": true, "ssh": { "publicKeys": [ { "path": "/home/azureuser/.ssh/authorized_keys", "keyData": "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDKT67quSPxlSXgVuTmEaakzqM4XmJlMHDO5dE1buDgVh01rrAl8YEiNPT9JjWtURitdUMYmUUouaTGhLtUFr+7zxv2Wz5+lXD4hZryn9rvAQU/AlFTo9+MfWNwmuoqJ1P0zLT9+symRdg+j4xhyhmq7QitCZ3Cn+gY7RUdNW18WLprn6xfRb3YNvtWPDXdQJBv5dOldSVG9dJtTMd/wQpfrBkleoURH3LMJcuBd84sTmy0t+MMm7Zv1VaEs3Ny75u2yHpDdQa8pfCnf8nbh9GsuG552pdVUt0g3I [...]
                },
                "networkProfile": { "networkInterfaces": [ { "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_web2_nic_name'))]" } ] }
            }
        }
    ]
}
